# libbase

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  vcpkg.json
include/base/: assert.h  auto_reset.h  base_export.h  compiler_specific.h  immediate_crash.h  macros.h  no_destructor.h  predef.h
include/base/containers/: vector_buffer.h
include/base/icu/: utf.h
include/base/strings/: escapes.h  string_util_internal.h  string_utils.constants.h  string_utils.h  string_utils.internal.h  typedefs.h  utf_string_conversion.h  utf_string_conversion_utils.h
include/base/types/: id_type.h  pass_key.h  strong_alias.h
src/: base.cpp
src/strings/: string_utils.cpp  utf_string_conversion.cpp  utf_string_conversion_utils.cpp
test/: .clang-tidy  CMakeLists.txt  assert.test.cpp  auto_reset.test.cpp  immediate_crash_test_helper.cpp  no_destructor.test.cpp
test/containers/: vector_buffer.test.cpp
test/icu/: utf.utf16.test.cpp  utf.utf8.test.cpp
test/strings/: string_utils.compare_case_insensitive_ascii.test.cpp  string_utils.equals_case_insensitive_ascii.test.cpp  string_utils.remove_chars.test.cpp  string_utils.replace_chars.test.cpp  string_utils.test.cpp  string_utils.to_lower_ascii.test.cpp  string_utils.to_upper_ascii.test.cpp  string_utils.trim_string.test.cpp  string_utils.truncate_utf8_to_byte_size.test.cpp  utf_string_conversion_utils.test.cpp
test/test_utils/: copy_only_int.cpp  copy_only_int.h  gtest_fix_u8string_comparison.cpp  gtest_fix_u8string_comparison.h  move_only_int.h
test/types/: id_type.test.cpp  pass_key.test.cpp  strong_alias.test.cpp
tools/cmake/: base-config.cmake.in  base.pc.in  find_windows_set_env_cmd.cmake  join_paths.cmake  join_strings.cmake  longlp_desired_compile_options.cmake  set_verbose.cmake
